versioned_docs/version-5.2/client-api/operations/server-wide/add-database-node.mdx
---
title: "Adding a Database Node"
hide_table_of_contents: true
sidebar_label: Add Database Node
sidebar_position: 0
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "nodejs"];


# Adding a Database Node
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* When creating a database, you can specify the number of replicas for that database.  
  This determines the number of database instances in the database-group.

* __The number of replicas can be dynamically increased__ even after the database is up and running,  
  by adding more nodes to the database-group.  

* The nodes added must already exist in the [cluster topology](../../../server/clustering/rachis/cluster-topology.mdx).

* Once a new node is added to the database-group,  
  the cluster assigns a mentor node (from the existing database-group nodes) to update the new node.

* In this page:
    * [Add database node - random](../../../client-api/operations/server-wide/add-database-node.mdx#add-database-node---random)
    * [Add database node - specific](../../../client-api/operations/server-wide/add-database-node.mdx#add-database-node---specific)
    * [Syntax](../../../client-api/operations/server-wide/add-database-node.mdx#syntax)  
</Admonition>
## Add database node - random

* Use `AddDatabaseNodeOperation` to add another database-instance to the database-group.
* The node added will be a random node from the existing cluster nodes.   

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Create the AddDatabaseNodeOperation
// Add a random node to 'Northwind' database-group
var addDatabaseNodeOp = new AddDatabaseNodeOperation("Northwind");

// Execute the operation by passing it to Maintenance.Server.Send
DatabasePutResult result = store.Maintenance.Server.Send(addDatabaseNodeOp);

// Can access the new topology
var numberOfReplicas = result.Topology.AllNodes.Count();
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Create the AddDatabaseNodeOperation
// Add a random node to 'Northwind' database-group
var addDatabaseNodeOp = new AddDatabaseNodeOperation("Northwind");

// Execute the operation by passing it to Maintenance.Server.SendAsync
DatabasePutResult result = await store.Maintenance.Server.SendAsync(addDatabaseNodeOp);

// Can access the new topology
var numberOfReplicas = result.Topology.AllNodes.Count();
`}
</CodeBlock>
</TabItem>
</Tabs>



## Add database node - specific

* You can specify the node tag to add.  
* This node must already exist in the cluster topology.

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Create the AddDatabaseNodeOperation
// Add node C to 'Northwind' database-group
var addDatabaseNodeOp = new AddDatabaseNodeOperation("Northwind", "C");

// Execute the operation by passing it to Maintenance.Server.Send
DatabasePutResult result = store.Maintenance.Server.Send(addDatabaseNodeOp);
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Create the AddDatabaseNodeOperation
// Add node C to 'Northwind' database-group
var addDatabaseNodeOp = new AddDatabaseNodeOperation("Northwind", "C");

// Execute the operation by passing it to Maintenance.Server.SendAsync
DatabasePutResult result = await store.Maintenance.Server.SendAsync(addDatabaseNodeOp);
`}
</CodeBlock>
</TabItem>
</Tabs>



## Syntax

<TabItem value="syntax" label="syntax">
<CodeBlock language="csharp">
{`public AddDatabaseNodeOperation(string databaseName, string nodeTag = null)
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| - | - | - |
| **databaseName** | string | Name of a database for which to add the node. |
| **nodeTag** | string | Tag of node to add.<br/>Default: a random node from the existing cluster topology will be added. |

| Object returned by Send operation:<br/>`DatabasePutResult` | | |
| - | - | - |
| RaftCommandIndex | long | Index of raft command that was executed |
| Name | string | Database name |
| Topology | `DatabaseTopology` | The database topology |
| NodesAddedTo | List&lt;string&gt; | New nodes added to the cluster topology.<br/>Will be 0 for this operation. |








</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="Note">

* When creating a database, you can specify the number of replicas for that database.  
  This determines the number of database instances in the database-group.

* __The number of replicas can be dynamically increased__ even after the database is up and running,  
  by adding more nodes to the database-group.  

* The nodes added must already exist in the [cluster topology](../../../server/clustering/rachis/cluster-topology.mdx).

* Once a new node is added to the database-group,  
  the cluster assigns a mentor node (from the existing database-group nodes) to update the new node.

* In this page:
    * [Add database node - random](../../../client-api/operations/server-wide/add-database-node.mdx#add-database-node---random)
    * [Add database node - specific](../../../client-api/operations/server-wide/add-database-node.mdx#add-database-node---specific)
    * [Syntax](../../../client-api/operations/server-wide/add-database-node.mdx#syntax)  
</Admonition>
## Add database node - random

* Use `AddDatabaseNodeOperation` to add another database-instance to the database-group.
* The node added will be a random node from the existing cluster nodes.   

<TabItem value="add_1" label="add_1">
<CodeBlock language="js">
{`// Create the AddDatabaseNodeOperation
// Add a random node to 'Northwind' database-group
const addDatabaseNodeOp = new AddDatabaseNodeOperation("Northwind");

// Execute the operation by passing it to maintenance.server.send
const result = await documentStore.maintenance.server.send(addDatabaseNodeOp);

// Can access the new topology
const numberOfReplicas = getAllNodesFromTopology(result.topology).length;
`}
</CodeBlock>
</TabItem>



## Add database node - specific

* You can specify the node tag to add.  
* This node must already exist in the cluster topology.

<TabItem value="add_2" label="add_2">
<CodeBlock language="js">
{`// Create the AddDatabaseNodeOperation
// Add node C to 'Northwind' database-group
const addDatabaseNodeOp = new AddDatabaseNodeOperation("Northwind", "C"));

// Execute the operation by passing it to maintenance.server.send
const result = await documentStore.maintenance.server.send(addDatabaseNodeOp);
`}
</CodeBlock>
</TabItem>



## Syntax

<TabItem value="syntax" label="syntax">
<CodeBlock language="js">
{`const addDatabaseNodeOp = new AddDatabaseNodeOperation(databaseName, nodeTag?);
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| - | - | - |
| **databaseName** | string | Name of a database for which to add the node. |
| **nodeTag** | string | Tag of node to add.<br/>Default: If not passed then a random node from the existing cluster topology will be added. |

| Object returned by send operation has: | | |
| - | - | - |
| raftCommandIndex | number | Index of raft command that was executed |
| name | string | Database name |
| topology | `DatabaseTopology` | The database topology |
| nodesAddedTo | string[] | New nodes added to the cluster topology.<br/>Will be 0 for this operation. |








</LanguageContent>

<!---

-->